force-app/main/default/objects/SEL_IntegrationDataMock__mdt/SEL_IntegrationDataMock__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to store the mock data related to an integration setting</description>
    <label>SEL Integration Data Mock</label>
    <pluralLabel>SEL Integration Data Mocks</pluralLabel>
</CustomObject>