force-app/main/default/objects/SEL_IntegrationDataMock__mdt/fields/SEL_Body__c.field-meta.xml
<CustomField>
    <fullName>SEL_Body__c</fullName>
    <description>HTTP body of the response.</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>