force-app/main/default/objects/SEL_IntegrationDataMock__mdt/fields/SEL_Header__c.field-meta.xml
<CustomField>
    <fullName>SEL_Header__c</fullName>
    <description>This field is to store the response header</description>
    <inlineHelpText>The header must be a serialized version of a map of a string of strings. Example: {&quot;Key2&quot;:&quot;value2&quot;,&quot;Key1&quot;:&quot;value1&quot;}</inlineHelpText>
    <label>Header</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>