force-app/main/default/objects/SEL_IntegrationDataMock__mdt/fields/SEL_Status__c.field-meta.xml
<CustomField>
    <fullName>SEL_Status__c</fullName>
    <description>Mock status value in string.</description>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>