force-app/main/default/objects/SEL_IntegrationDataMock__mdt/fields/SEL_StatusCode__c.field-meta.xml
<CustomField>
    <fullName>SEL_StatusCode__c</fullName>
    <description>Status code to return.</description>
    <label>Status Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>